# physics-to-foss

./: README.md  index.html  info-vsc.md  postBuild  requirements.txt
.github/workflows/: build-slides.yml
sunnivasPhysics/: .gitignore  README.md
sunnivasPhysics/talk/: README.md  slides.md  theme.css
vertical-sky-component/: README.md  interactive_cie_model.ipynb  interactive_coordinates.ipynb  main.py  postBuild  pyproject.toml
vertical-sky-component/static-plots/: angles_visualization.py
