[project]
name = "vertical-sky-component"
version = "0.1.0"
description = "Visualization of the Vertical Sky Component (VSC) calculation using the CIE Standard Overcast Sky model"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
    "ipywidgets>=8.0.0",
    "jupyter>=1.0.0",
]

[project.scripts]
vsc = "main:main"
